<resources>
    <string name="app_name">Clicked</string>
    <string name="Welcometext">The Latest Daily News Application Clicked</string>
    <string name="logintext">Login</string>
    <string name="registertext">Register</string>
    <string name="email">Email</string>
    <string name="email_placeholder">Enter Your Email</string>
    <string name="password_placeholder">Enter Your Password</string>
    <string name="password">Password</string>
    <string name="belumpunyaakun">Dont Have an Account?</string>
    <string name="registernow">Register Now</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="passwordconfirm_placeholder">Re-enter Your Password</string>
    <string name="passwordconfirm">Confirm Password</string>
    <string name="username">Username</string>
    <string name="username_placeholder">Enter Your Username</string>
    <string name="sudahpunyaakun">Already Have an Account?</string>
    <string name="logout">Logout</string>
    <string name="address">Address</string>
    <string name="address_placeholder">Enter Your Address</string>
    <string name="upload_file">Upload File</string>
    <string name="upload_file_placeholder">Enter Profile Photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="upload">Upload</string>
    <string name="setting">Settings</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="totalpost">23</string>
    <string name="post">Posts</string>
    <string name="judulposts">Match Result Indonesia Vs Tanzania</string>
    <string name="tanggalposts">23 June 2024</string>
    <string name="isiposts">The Indonesian National Team had to settle for a draw against the Tanzanian National Team in a friendly match. The Garuda squad faced the Tanzanian National Team.</string>
    <string name="postnews">Publish News</string>
    <string name="Camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="paragraf3">Enter Paragraph 3 if any</string>
    <string name="sertakanlokasi">Include Your Location</string>
    <string name="paragraf1">Enter Paragraph 1</string>
    <string name="paragraf2">Enter Paragraph 2</string>
    <string name="judulberita">Enter News Title</string>
    <string name="judul">Title</string>
    <string name="textparagraf1">Paragraph 1</string>
    <string name="textparagraf2">Paragraph 2</string>
    <string name="textparagraf3">Paragraph 3</string>
    <string name="tags">Tags</string>
    <string name="saveButton">Publish</string>
    <string name="textedit">Edit Post</string>
    <string name="judul_home">Controversial Points in the Broadcasting Bill</string>
    <string name="tanggal_home">03 June 2024</string>
    <string name="readmore">read more...</string>
    <string name="teknologi">TECHNOLOGY</string>
    <string name="bisnis">BUSINESS</string>
    <string name="kesehatan">HEALTH</string>
    <string name="ekonomi">ECONOMY</string>
    <string name="lifestyle">LIFESTYLE</string>
    <string name="politik">POLITICS</string>
    <string name="tekslengkap">Controversial Points in the Broadcasting Bill</string>
    <string name="nameprofile">Favour Ishecap</string>
    <string name="teksparagraf1">Previously, several parties had strongly criticized the discourse on revising the Broadcasting Law. The Press Council considers several points of the Broadcasting Bill to have the potential to restrict press freedom and produce poor journalistic products. Meanwhile, the Chairman of Commission I of the House of Representatives, Meutya Hafid, emphasized that her party has no intention of diminishing the role of the mass media through the Broadcasting Bill. Commission I of the House of Representatives is the party that has proposed the revision of the law from the beginning.</string>
    <string name="teksparagraf2">Meutya claimed to have a good relationship with stakeholders in the media industry, including the Press Council as a working partner of Commission I of the House of Representatives. According to her, the sustainability of a healthy media remains important.</string>
    <string name="teksparagraf3">"There has never been any intention from Commission I of the House of Representatives to diminish the role of the Press," she said in a written statement on Thursday (16/5). "I convey to all friends, from our faction, have instructed me to temporarily not discuss the Broadcasting Bill," said Supratman at the parliament complex, Monday (28/5).</string>
    <string name="textkosong">No Data to Display for this Category</string>
    <string-array name="spinner_items">
        <item>Technology</item>
        <item>Business</item>
        <item>Health</item>
        <item>Economy</item>
        <item>Lifestyle</item>
        <item>Politics</item>
    </string-array>
    <string name="confirmation_logout_title">Logout Confirmation</string>
    <string name="confirmation_logout_message">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="document_not_exist">Document does not exist</string>
    <string name="error_getting_document">Error getting document: %1$s</string>
</resources>
