<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragementupdate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Update.UpdateFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/postnews"
                android:textAlignment="center"
                android:textColor="@color/aquamarine"
                android:textSize="34sp"></TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/aquamarine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagepreviewedit"
                    android:layout_width="250dp"
                    android:layout_height="150dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/uploadpreviewimage">

                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/camera"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:backgroundTint="@color/aquamarine"
                        android:text="@string/Camera" />

                    <Button
                        android:id="@+id/gallery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:backgroundTint="@color/aquamarine"
                        android:text="@string/gallery" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:text="@string/judul"
                android:textColor="@color/black"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

            <EditText
                android:id="@+id/judulberitaedit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="@drawable/rectanglepost"
                android:gravity="top"
                android:hint="@string/judulberita"
                android:padding="8dp"
                android:textColorHint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/textparagraf1"
                android:textColor="@color/black"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

            <EditText
                android:id="@+id/paragraf1edit"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:background="@drawable/rectanglepost"
                android:gravity="top"
                android:hint="@string/paragraf1"
                android:padding="6dp"
                android:textColorHint="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/textparagraf2"
                android:textColor="@color/black"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

            <EditText
                android:id="@+id/paragraf2edit"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:background="@drawable/rectanglepost"
                android:gravity="top"
                android:hint="@string/paragraf2"
                android:padding="6dp"
                android:textColorHint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/textparagraf3"
                android:textColor="@color/black"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

            <EditText
                android:id="@+id/paragraf3edit"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:background="@drawable/rectanglepost"
                android:gravity="top"
                android:hint="@string/paragraf3"
                android:padding="6dp"
                android:textColorHint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/tags"
                android:textColor="@color/black"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

            <com.google.android.material.card.MaterialCardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="16dp"
                card_view:strokeColor="@color/black"
                card_view:strokeWidth="2dp">

                <Spinner
                    android:id="@+id/my_spinneredit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:spinnerMode="dropdown" />
            </com.google.android.material.card.MaterialCardView>

            <CheckBox
                android:id="@+id/includePositionCheckBoxedit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/sertakanlokasi"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/saveedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="130dp"
                android:backgroundTint="@color/aquamarine"
                android:text="@string/saveButton" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</FrameLayout>