<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.upload.UploadFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/postnews"
        android:textAlignment="center"
        android:textColor="@color/aquamarine"
        android:textSize="34sp"
        android:paddingVertical="10dp"
        ></TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/aquamarine"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imagepreview"
                android:layout_width="250dp"
                android:layout_marginHorizontal="10dp"
                android:layout_height="150dp"
                android:background="@drawable/uploadpreviewimage"
                >

            </ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <Button
                    android:id="@+id/camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Camera"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/aquamarine"
                     /> <Button
                android:id="@+id/gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/gallery"
                android:backgroundTint="@color/aquamarine"
                android:layout_marginTop="10dp"
                />
            </LinearLayout>
        </LinearLayout>
        <EditText

            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:background="@drawable/rectanglepost"
            android:gravity="top"
            android:hint="@string/paragraf1"
            android:padding="6dp"
            android:textColorHint="@color/black"
            />
        <EditText

            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:background="@drawable/rectanglepost"
            android:gravity="top"
            android:hint="@string/paragraf2"
            android:padding="6dp"
            android:textColorHint="@color/black"
            />
        <EditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:background="@drawable/rectanglepost"
            android:gravity="top"
            android:hint="@string/paragraf3"
            android:padding="6dp"
            android:textColorHint="@color/black"
            />


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            card_view:strokeWidth="2dp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/white"
            card_view:strokeColor="@color/black"
            app:cardCornerRadius="16dp">
            <Spinner
                android:id="@+id/my_spinner"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="50dp"
                android:spinnerMode="dropdown" />
        </com.google.android.material.card.MaterialCardView>

        <CheckBox
            android:id="@+id/includePositionCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sertakanlokasi"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_add_description"
            />
    </LinearLayout>
    </ScrollView>
</FrameLayout>